Display next label for a deleted level

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,23 +6,23 @@ Change Log:
 ----------------------------------------------------------------------
 3.5 - 5/6/2014 - Jonathan Cowher & Umesh Kumar
 ----------------------------------------------------------------------
-- Fixed:  Plugin Path variable
-- Fixed:  Translatable strings
-- Fixed:  Checkout url ( displayed if quota is exceeded ) on media page
-- New:    Force Network Used space check if quota is enabled, can be overridden using filter 'psts_enable_used_space_check'
-- Added:  filter 'psts_pypl_checkout_image_url' for Paypal
-- Update: merge tag to trunk
-- Fixed:  Updated wp_specialchars to esc_html
-- Added:  Checkout user role selection setting
-- Addes:  Persistent object cache support
-- Added:  Russian Rubles to paypal currencies and locale
-- Improve directions in Premium Plugins module
-- New: Allow changing which site the checkout page is on via PSTS_CHECKOUT_SITE define
-- Fix: Upload Quota ad-free level showing when not active in ads module
-- New: Add admin bar upgrade button for Bulk Upgrades module
-- New: Filters to override ads conditionals
-- Fix: Check class_exists on Stripe API class
-- New: BuddyPress feature to hide non-pro blogs from activity streams
+- New:   Limit Coupons availability to selected period
+- New:   Filter 'psts_pypl_checkout_image_url' for Paypal
+- New:   Checkout user role selection setting
+- New:   Persistent object cache support
+- New:   Russian Rubles to paypal currencies and locale
+- New:   Force Network Used space check if quota is enabled, can be overridden using filter 'psts_enable_used_space_check'
+- New:   Improve directions in Premium Plugins module
+- New:   Allow changing which site the checkout page is on via PSTS_CHECKOUT_SITE define
+- New:   Add admin bar upgrade button for Bulk Upgrades module
+- New:   Filters to override ads conditionals
+- New:   BuddyPress feature to hide non-pro blogs from activity streams
+- Fixed: Updated wp_specialchars to esc_html
+- Fixed: Upload Quota ad-free level showing when not active in ads module
+- Fixed: Check class_exists on Stripe API class
+- Fixed: Plugin Path variable
+- Fixed: Translatable strings
+- Fixed: Checkout url ( displayed if quota is exceeded ) on media page
 
 3.4.3.6 - 4/1/2014 - Jonathan Cowher
 ----------------------------------------------------------------------
