--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.4.3.8 - 9/7/2014 - Aaron Edwards
+----------------------------------------------------------------------
+- Fixed: Permanent upgrades that got truncated on 32 bit systems due to (int) casting
+
 3.4.3.7 - 8/4/2014 - Aaron Edwards
 ----------------------------------------------------------------------
 - Added: Add BN code to PayPal gateway
