--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.4.3.9 - 9/10/2014 - Aaron Edwards
+----------------------------------------------------------------------
+- Fixed: Upload quota upgrade message was displaying on main site
+
 3.4.3.8 - 9/7/2014 - Aaron Edwards
 ----------------------------------------------------------------------
 - Fixed: Permanent upgrades that got truncated on 32 bit systems due to (int) casting
