--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.4.5 - 11/12/2014 - Aaron Edwards
+----------------------------------------------------------------------
+- New: Add timezone offset support to log entry timestamps
+
 3.4.4 - 10/30/2014 - Aaron Edwards
 ----------------------------------------------------------------------
 - Fixed: Some PHP notices
