--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+3.4.7.1 - 01/29/2015 - Rheinard Korf
+----------------------------------------------------------------------
+- Fix: PHP warning message no longer appears when no modules are enabled.
+
 3.4.7 - 01/29/2015 - Rheinard Korf
 ----------------------------------------------------------------------
 - Fix: Trial users now correctly expires
