Various fixes including PHP5.2 compatibility.
Replaced static method calls using string variables with appropriate
call_user_func() methods to fix PHP 5.2 compatibility.

Fixed issue with Ads module when first creating the table for Ads
config.

Various fixes for 'undefined' variables.

Version change.

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,11 @@ Author: Aaron Edwards
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+3.4.7.2 - 02/03/2015 - Rheinard Korf
+----------------------------------------------------------------------
+- Fix: PHP 5.2 compatibility issue.
+- Fix: Data table creation for Ads module.
+- Fix: Some PHP warnings.
 
 3.4.7.1 - 01/29/2015 - Rheinard Korf
 ----------------------------------------------------------------------
