--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,13 @@ Author: Aaron Edwards
 
 Change Log:
 ----------------------------------------------------------------------
+
+----------------------------------------------------------------------
+3.5.0.1 - 6/5/2015 - Rheinard Korf & Umesh Kumar
+----------------------------------------------------------------------
+- Fixed: Fatal error when creating checkout page.
+- Fixed: Small CSS adjustment to fix pricing table in some themes.
+
 ----------------------------------------------------------------------
 3.5 - 6/5/2015 - Rheinard Korf & Umesh Kumar
 ----------------------------------------------------------------------
