--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ Change Log:
 ----------------------------------------------------------------------
 - Fixed: Fatal error when creating checkout page.
 - Fixed: Small CSS adjustment to fix pricing table in some themes.
+- Fixed: Multiple backslashes no longer appears in textboxes.
 
 ----------------------------------------------------------------------
 3.5 - 6/5/2015 - Rheinard Korf & Umesh Kumar
