--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,7 @@ Change Log:
 - Fixed: Small CSS adjustment to fix pricing table in some themes.
 - Fixed: Multiple backslashes no longer appears in textboxes.
 - Fixed: Site Title: Space in title replaced by +
+- Changed: Making it obvious that Stripe setup currency must match Stripe account currency
 
 ----------------------------------------------------------------------
 3.5 - 6/5/2015 - Rheinard Korf & Umesh Kumar
