--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,11 @@ Change Log:
 ----------------------------------------------------------------------
 
 ----------------------------------------------------------------------
+3.5.0.2 - 6/5/2015 - Rheinard Korf & Umesh Kumar
+----------------------------------------------------------------------
+- Fixed: HTML being displayed on Media library page
+
+----------------------------------------------------------------------
 3.5.0.1 - 6/5/2015 - Rheinard Korf & Umesh Kumar
 ----------------------------------------------------------------------
 - Fixed: Fatal error when creating checkout page.
