--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,8 @@ Change Log:
 - Fixed: Warning message when only using one gateway and having Bulk Upgrade module enabled
 - Fixed: Issue with level selection box showing 1's or 0's
 - Fixed: Paypal refund - Fatal Error
+- Fixed: Do not show gateways if there were errors in checkout page
+- Fixed: Do not process payment, if no level and period was selected
 - Added: Additional CSS class added to items on features table for custom styling
 
 ----------------------------------------------------------------------
