Fix Stripe upgrade issue.

--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@ Change Log:
 - Fixed: Do not show gateways if there were errors in checkout page
 - Fixed: Do not process payment, if no level and period was selected
 - Added: Additional CSS class added to items on features table for custom styling
+- Fixed: Upgrading Stripe subscriptions from 3.4 to 3.5
 
 ----------------------------------------------------------------------
 3.5.0.2 - 6/12/2015 - Rheinard Korf & Umesh Kumar
