--- a/changelog.txt
+++ b/changelog.txt
@@ -8,8 +8,17 @@ Change Log:
 
 3.5.0.4 - 6/19/2015 - Rheinard Korf & Umesh Kumar
 ----------------------------------------------------------------------
+- New: Pricing tables styling settings created:
+     * Checkout table now has preset layouts
+     * Checkout table can now be styled within Pro Sites
+- New: Period selector can now be moved outside of the pricing table (above) removing the first column
+- New: Coupons can now be moved outside of the pricing table (below) for different visual look
+- Fixed: With Coupons active it will now display below the pricing table if only one period is available
+- Fixed: Incorrect level recorded at checkout when only one period is active
 - Fixed: Check level visibility before displaying on checkout page
 - Fixed: Show correct number of levels in pricing tables setup after a level is deleted
+- Fixed: Confusing trial message will not show when a user has cancelled their trial
+
 
 3.5.0.3 - 6/17/2015 - Rheinard Korf & Umesh Kumar
 ----------------------------------------------------------------------
