--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,10 @@ Change Log:
 
 ----------------------------------------------------------------------
 
+3.5.0.5 - 6/19/2015 - Rheinard Korf & Umesh Kumar
+
+- Fixed: Double Signup email, when Buddypress is active
+
 3.5.0.4 - 6/19/2015 - Rheinard Korf & Umesh Kumar
 ----------------------------------------------------------------------
 - New: Pricing tables styling settings created:
