--- a/changelog.txt
+++ b/changelog.txt
@@ -6,11 +6,13 @@ Change Log:
 
 ----------------------------------------------------------------------
 
-3.5.0.5 - 6/19/2015 - Rheinard Korf & Umesh Kumar
+3.5.1 - 6/19/2015 - Rheinard Korf & Umesh Kumar
 
 - Fixed: Double Signup email, when Buddypress is active
 - Fixed: Divison by zero for single column pricing table
 - Fixed: User activation mail not being sent ( Disable only blog activation emails, If singup on checkout is enabled)
+- Fixed: Warning and Notices
+- Fixed: Stripe: Issue with creating coupons for percent off
 
 3.5.0.4 - 7/01/2015 - Rheinard Korf & Umesh Kumar
 ----------------------------------------------------------------------
