--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,7 @@ Change Log:
 - Fixed: Stripe: Issue with creating coupons for percent off
 - Fixed: HTML being rendered if pricing table is disabled
 - Fixed: Paypal: Paypal not working if pricing table was disabled
+- Fixed: Currency Symbols: Turkish Lira HTML code
 
 3.5.0.4 - 7/01/2015 - Rheinard Korf & Umesh Kumar
 ----------------------------------------------------------------------
