--- a/changelog.txt
+++ b/changelog.txt
@@ -23,6 +23,7 @@ Change Log:
 - Fixed: Wrong Upgrade amount if price is in decimal
 - Fixed: Checkout: Do not show cancel subscription link for Non recurring subscriptions
 - Fixed: Stripe: Subscription Cancel status
+- Fixed: Pricing Table feature description not visible for single level
 - Added: Manual Payments: Activation Link in email sent to admin
 
 3.5.0.4 - 7/01/2015 - Rheinard Korf & Umesh Kumar
