--- a/changelog.txt
+++ b/changelog.txt
@@ -6,25 +6,26 @@ Change Log:
 
 ----------------------------------------------------------------------
 
-3.5.1 - 6/19/2015 - Umesh Kumar
+3.5.1 - 7/26/2015 - Umesh Kumar
 
 - Fixed: Double Signup email, when Buddypress is active
 - Fixed: Division by zero for single column pricing table
 - Fixed: User activation mail not being sent ( Disable only blog activation emails, If singup on checkout is enabled)
 - Fixed: Warning and Notices
-- Fixed: Stripe: Issue with creating coupons for percent off
 - Fixed: HTML being rendered if pricing table is disabled
-- Fixed: PayPal: PayPal not working if pricing table was disabled
-- Fixed: Currency Symbols: Turkish Lira HTML code
-- Fixed: Settings: Custom css for pricing table not being saved
-- Fixed: Post/Page Quota Media Limit not working and admin notice for exceeded limits
-- Fixed: PayPal: Coupon not working
-- Fixed: Stats: Wrong payment amount stored in Pro Sites table
 - Fixed: Wrong Upgrade amount if price is in decimal
-- Fixed: Checkout: Do not show cancel subscription link for Non recurring subscriptions
-- Fixed: Stripe: Subscription Cancel status
 - Fixed: Pricing Table feature description not visible for single level
-- Added: Manual Payments: Activation Link in email sent to admin
+- Fixed: Post/Page Quota Media Limit not working and admin notice for exceeded limits
+- Fixed: Settings: Custom css for pricing table not being saved
+- Fixed: Stats: Wrong payment amount stored in Pro Sites table
+- Fixed: Checkout: Do not show cancel subscription link for Non recurring subscriptions
+- Fixed: Currency Symbols: Turkish Lira HTML code
+- Fixed: PayPal: Coupon not working
+- Fixed: PayPal: PayPal not working if pricing table was disabled
+- Fixed: Stripe: Issue with creating coupons for percent off
+- Fixed: Stripe: Subscription Cancel status
+- Fixed: Manual Payment: Pro Site level not assigned
+- Added: Manual Payment: Activation Link, Cost and Coupon details in email sent to admin
 
 3.5.0.4 - 7/01/2015 - Rheinard Korf & Umesh Kumar
 ----------------------------------------------------------------------
