PSTS_CHECKOUT_SITE: Checkout page not being loaded

--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,7 @@ Change Log:
 - Fixed: Wrong Upgrade amount if price is in decimal
 - Fixed: Pricing Table feature description not visible for single level
 - Fixed: Post/Page Quota Media Limit not working and admin notice for exceeded limits
+- Fixed: PSTS_CHECKOUT_SITE issue with checkout page on subsite
 - Fixed: Settings: Custom css for pricing table not being saved
 - Fixed: Stats: Wrong payment amount stored in Pro Sites table
 - Fixed: Checkout: Do not show cancel subscription link for Non recurring subscriptions
