--- a/changelog.txt
+++ b/changelog.txt
@@ -17,12 +17,13 @@ Change Log:
 - Fixed: Wrong Upgrade amount if price is in decimal
 - Fixed: Post/Page Quota Media Limit not working and admin notice for exceeded limits
 - Fixed: PSTS_CHECKOUT_SITE issue with checkout page on subsite
-- Fixed: Checkout Page:  feature description not visible for single level in pricing table
-- Fixed: Checkout Page: Styling issue single level, single period plans, Highlighting featured plans
 - Fixed: Settings: Custom css for pricing table not being saved
 - Fixed: Stats: Wrong payment amount stored in Pro Sites table
+- Fixed: Checkout Page:  feature description not visible for single level in pricing table
+- Fixed: Checkout Page: Styling issue single level, single period plans, Highlighting featured plans
 - Fixed: Checkout: Create a new site link not redirecting when Buddypress is active
 - Fixed: Checkout: Do not show cancel subscription link for Non recurring subscriptions
+- Fixed: Checkout: Clicking on choose plan, doesn't shows payment gateway
 - Fixed: Currency Symbols: Turkish Lira HTML code
 - Fixed: PayPal: Coupon not working
 - Fixed: PayPal: PayPal not working if pricing table was disabled
