--- a/changelog.txt
+++ b/changelog.txt
@@ -7,30 +7,32 @@ Change Log:
 
 ----------------------------------------------------------------------
 
-3.5.1 - 7/26/2015 - Umesh Kumar
+3.5.1 - 08/03/2015 - Umesh Kumar
 
-- Fixed: Double Signup email, when Buddypress is active
 - Fixed: Division by zero for single column pricing table
-- Fixed: User activation mail not being sent ( Disable only blog activation emails, If singup on checkout is enabled)
-- Fixed: Warning and Notices (Manual Payment Gateway, )
 - Fixed: HTML being rendered if pricing table is disabled
-- Fixed: Wrong Upgrade amount if price is in decimal
 - Fixed: Post/Page Quota Media Limit not working and admin notice for exceeded limits
 - Fixed: PSTS_CHECKOUT_SITE issue with checkout page on subsite
-- Fixed: Settings: Custom css for pricing table not being saved
-- Fixed: Stats: Wrong payment amount stored in Pro Sites table
-- Fixed: Checkout Page:  feature description not visible for single level in pricing table
-- Fixed: Checkout Page: Styling issue single level, single period plans, Highlighting featured plans
+- Fixed: Wrong Upgrade amount if price is in decimal
+- Fixed: Warning and Notices (Manual Payment Gateway, )
+- Fixed: Checkout:  feature description not visible for single level in pricing table
+- Fixed: Checkout: Styling issue single level, single period plans, Highlighting featured plans
 - Fixed: Checkout: Create a new site link not redirecting when Buddypress is active
 - Fixed: Checkout: Do not show cancel subscription link for Non recurring subscriptions
 - Fixed: Checkout: Clicking on choose plan, doesn't shows payment gateway
+- Fixed: Checkout: Clicking on choose plan, doesn't shows payment gateway
+- Fixed: Coupon: Not displayed, if feature table is disabled and coupon set to display in first column
 - Fixed: Currency Symbols: Turkish Lira HTML code
-- Fixed: PayPal: Coupon not working
-- Fixed: PayPal: PayPal not working if pricing table was disabled
-- Fixed: Stripe: Issue with creating coupons for percent off
-- Fixed: Stripe: Subscription Cancel status
 - Fixed: Manual Payment: Pro Site level not assigned
 - Added: Manual Payment: Activation Link, Cost and Coupon details in email sent to admin
+- Fixed: PayPal: Coupon not working
+- Fixed: PayPal: PayPal not working if pricing table was disabled
+- Fixed: Settings: Custom css for pricing table not being saved
+- Fixed: Signup: User activation mail not being sent ( Disable only blog activation emails, If signup on checkout is enabled)
+- Fixed: Signup: Double Signup email, when Buddypress is active
+- Fixed: Stripe: Issue with creating coupons for percent off
+- Fixed: Stripe: Subscription Cancel status
+- Fixed: Stats:  Wrong payment amount stored in Pro Sites table
 
 3.5.0.4 - 7/01/2015 - Rheinard Korf & Umesh Kumar
 ----------------------------------------------------------------------
