--- a/changelog.txt
+++ b/changelog.txt
@@ -21,7 +21,7 @@ Change Log:
 - Fixed: Checkout: Do not show cancel subscription link for Non recurring subscriptions
 - Fixed: Checkout: Clicking on choose plan, doesn't shows payment gateway
 - Fixed: Checkout: Clicking on choose plan, doesn't shows payment gateway
-- Fixed: Coupon: Not displayed, if feature table is disabled and coupon set to display in first column
+- Fixed: Coupon: Not displayed, if feature table is disabled and coupon set to display
 - Fixed: Currency Symbols: Turkish Lira HTML code
 - Fixed: Manual Payment: Pro Site level not assigned
 - Added: Manual Payment: Activation Link, Cost and Coupon details in email sent to admin
