Stripe: Handle delay in subscription renewal

--- a/changelog.txt
+++ b/changelog.txt
@@ -37,6 +37,7 @@ Change Log:
 - Fixed: Stripe: Payment receipt sent to network admin instead of site admin on upgrade
 - Fixed: Stripe: Subscription Cancel status
 - Fixed: Stripe: Non Recurring subscription payments and upgrades
+- Fixed: Stripe: Handle delay in subscription renewal
 - Fixed: Stats:  Wrong payment amount stored in Pro Sites table
 
 3.5.0.4 - 7/01/2015 - Rheinard Korf & Umesh Kumar
