--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,9 @@ Change Log:
 
 ----------------------------------------------------------------------
 
+3.5.1.1 - 08/18/2015 - Umesh Kumar
+- Fixed: Paypal: Currency difference while a different currency is selected initially and changed later
+
 3.5.1 - 08/12/2015 - Umesh Kumar
 
 - Fixed: Division by zero for single column pricing table
