--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,7 @@ Change Log:
 3.5.1.1 - 08/18/2015 - Umesh Kumar
 - Fixed: Paypal: Currency difference while a different currency is selected initially and changed later
 - Fixed: Paypal: Issue with new subscriptions
+- Fixed: Stripe: Pending status message not shown if signup on checkout is disabled
 - Fixed: Modules: Do not load modules on main site
 - Updated: Checkout: Call jQuery tabs only if there are multiple gateways
 
