--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,7 @@ Change Log:
 - Fixed: Paypal: Issue with new subscriptions
 - Fixed: Stripe: Pending status message not shown if signup on checkout is disabled
 - Fixed: Modules: Do not load modules on main site
+- Fixed: Payment amount comes to zero for existing expired sites
 - Updated: Checkout: Call jQuery tabs only if there are multiple gateways
 
 3.5.1 - 08/12/2015 - Umesh Kumar
