Signup message before checkout table

--- a/changelog.txt
+++ b/changelog.txt
@@ -13,8 +13,9 @@ Change Log:
 - Fixed: Stripe: Pending status message not shown if signup on checkout is disabled
 - Fixed: Modules: Do not load modules on main site
 - Fixed: Payment amount comes to zero for existing expired sites
-- Updated: Checkout: Call jQuery tabs only if there are multiple gateways
 - Fixed: Checkout: Monthly plan being selected if period selector is displayed at top
+- Fixed: Option to display a message on checkout page at the top
+- Updated: Checkout: Call jQuery tabs only if there are multiple gateways
 
 3.5.1 - 08/12/2015 - Umesh Kumar
 
