--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,8 @@ Change Log:
 - Fixed: Checkout: Monthly plan being selected if period selector is displayed at top
 - Fixed: Option to display a message on checkout page at the top
 - Fixed: Coupons displayed twice if pricing table and feature table disabled
+- Fixed: Stripe dbDelta issue
+- Added: Option to disable Force redirect to checkout page if site is expired
 - Updated: Checkout: Call jQuery tabs only if there are multiple gateways
 
 3.5.1 - 08/12/2015 - Umesh Kumar
